--- a/AutorizationWindowOnUIKit/Base.lproj/Main.storyboard
+++ b/AutorizationWindowOnUIKit/Base.lproj/Main.storyboard
@@ -23,11 +23,17 @@
                                         <rect key="frame" x="0.0" y="0.0" width="295" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="next"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="TCF-I2-WUd"/>
+                                        </connections>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="evg-wJ-52a">
                                         <rect key="frame" x="0.0" y="64" width="295" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="6FY-U7-aZC"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5P-j4-D5V">
                                         <rect key="frame" x="0.0" y="128" width="295" height="40.666666666666657"/>
@@ -45,7 +51,7 @@
                                         </buttonConfiguration>
                                         <connections>
                                             <action selector="enterButtornPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="2U2-yS-3vW"/>
-                                            <segue destination="RUb-PK-69w" kind="presentation" id="COa-ok-vbu"/>
+                                            <segue destination="RUb-PK-69w" kind="presentation" identifier="ShowView" id="COa-ok-vbu"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -67,10 +73,10 @@
                                             </attributedString>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="forgotLogin" destination="BYZ-38-t0r" eventType="touchUpInside" id="nPD-cK-f2e"/>
+                                            <action selector="forgotSome:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2kf-xU-RTl"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3k5-aE-ZU5">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3k5-aE-ZU5">
                                         <rect key="frame" x="136.33333333333331" y="0.0" width="136.33333333333331" height="30.333333333333332"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain">
@@ -84,7 +90,7 @@
                                             </attributedString>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="forgotPassword" destination="BYZ-38-t0r" eventType="touchUpInside" id="ieT-Ge-nnZ"/>
+                                            <action selector="forgotSome:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z0s-fR-6Ka"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -112,13 +118,13 @@
         <!--Information View Controller-->
         <scene sceneID="uhJ-8Z-nGA">
             <objects>
-                <viewController id="RUb-PK-69w" customClass="InformationViewController" customModule="AutorizationWindowOnUIKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="RUb-PK-69w" customClass="InformationViewController" customModule="AutorizationWindowOnUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xec-W0-5fg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVQ-CD-720">
-                                <rect key="frame" x="130" y="353.66666666666669" width="115" height="51"/>
+                                <rect key="frame" x="130" y="380.66666666666669" width="115" height="51"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="0.98825353384017944" green="0.18555337190628052" blue="0.016360459849238396" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Button"/>
@@ -132,19 +138,20 @@
                                     </attributedString>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="CloseButtonPresed" destination="RUb-PK-69w" eventType="touchUpInside" id="AwE-IP-jps"/>
+                                    <segue destination="Ghh-mf-zEX" kind="unwind" unwindAction="unwindSegueWithSegue:" id="tU5-N5-9Nv"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Zt2-dX-Btt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="PVQ-CD-720" firstAttribute="centerX" secondItem="Xec-W0-5fg" secondAttribute="centerX" id="3s0-SS-vHy"/>
-                            <constraint firstItem="PVQ-CD-720" firstAttribute="centerY" secondItem="Xec-W0-5fg" secondAttribute="centerY" id="qBn-Ie-qAS"/>
+                            <constraint firstItem="PVQ-CD-720" firstAttribute="centerX" secondItem="Xec-W0-5fg" secondAttribute="centerX" id="4AP-HN-5NR"/>
+                            <constraint firstItem="PVQ-CD-720" firstAttribute="centerY" secondItem="Xec-W0-5fg" secondAttribute="centerY" id="zw8-XB-uAb"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cXz-IM-Bzp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="Ghh-mf-zEX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="886" y="98"/>
         </scene>
