--- a/AutorizationWindowOnUIKit/Storyboards/Base.lproj/Main.storyboard
+++ b/AutorizationWindowOnUIKit/Storyboards/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.94333755969999999" green="0.75769582570000005" blue="0.52913977649999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.96492451429367065" green="0.93064159154891968" blue="0.86733919382095337" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Z8Z-mo-sWX" firstAttribute="top" secondItem="Oqp-cJ-VNo" secondAttribute="bottom" constant="10" id="KdS-PO-x9S"/>
                             <constraint firstItem="Z8Z-mo-sWX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="X35-xX-2e9"/>
@@ -141,9 +141,9 @@
                                     <segue destination="Ghh-mf-zEX" kind="unwind" unwindAction="unwindSegueWithSegue:" id="tU5-N5-9Nv"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0w-wS-4gR">
-                                <rect key="frame" x="152" y="184" width="71" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F0w-wS-4gR">
+                                <rect key="frame" x="40" y="184" width="295" height="46.666666666666657"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -153,8 +153,9 @@
                         <constraints>
                             <constraint firstItem="PVQ-CD-720" firstAttribute="centerX" secondItem="Xec-W0-5fg" secondAttribute="centerX" id="4AP-HN-5NR"/>
                             <constraint firstItem="F0w-wS-4gR" firstAttribute="top" secondItem="Zt2-dX-Btt" secondAttribute="top" constant="140" id="KAl-5k-ysL"/>
+                            <constraint firstItem="F0w-wS-4gR" firstAttribute="leading" secondItem="Zt2-dX-Btt" secondAttribute="leading" constant="40" id="Sju-mX-Cdl"/>
                             <constraint firstItem="Zt2-dX-Btt" firstAttribute="bottom" secondItem="PVQ-CD-720" secondAttribute="bottom" constant="40" id="b8O-JN-cHJ"/>
-                            <constraint firstItem="F0w-wS-4gR" firstAttribute="centerX" secondItem="Xec-W0-5fg" secondAttribute="centerX" id="zeQ-QC-8V0"/>
+                            <constraint firstItem="Zt2-dX-Btt" firstAttribute="trailing" secondItem="F0w-wS-4gR" secondAttribute="trailing" constant="40" id="piG-oT-zRs"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="PreView" image="flame" catalog="system" id="EWE-VX-sad"/>
@@ -187,10 +188,10 @@
             </objects>
             <point key="canvasLocation" x="885.60000000000002" y="97.536945812807886"/>
         </scene>
-        <!--View Controller-->
+        <!--Information View Controller-->
         <scene sceneID="kzh-7h-9zc">
             <objects>
-                <viewController id="QLJ-qm-cQO" sceneMemberID="viewController">
+                <viewController id="QLJ-qm-cQO" customClass="InformationViewController" customModule="AutorizationWindowOnUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uAc-yF-Gx5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -226,10 +227,27 @@
                     <view key="view" contentMode="scaleToFill" id="58b-8F-oqX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="URq-8O-tZA">
+                                <rect key="frame" x="40" y="168" width="295" height="24"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="CGj-tk-S6m"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="URq-8O-tZA" firstAttribute="leading" secondItem="CGj-tk-S6m" secondAttribute="leading" constant="40" id="JO8-wS-qgT"/>
+                            <constraint firstItem="CGj-tk-S6m" firstAttribute="trailing" secondItem="URq-8O-tZA" secondAttribute="trailing" constant="40" id="U6G-a5-zMR"/>
+                            <constraint firstItem="URq-8O-tZA" firstAttribute="top" secondItem="CGj-tk-S6m" secondAttribute="top" constant="80" id="qgw-OA-mMm"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jP3-P6-WXk"/>
+                    <connections>
+                        <outlet property="infoLabel" destination="URq-8O-tZA" id="xTc-vj-xH0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gps-ma-KxY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
